--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>
+      {% block titulo %}
+      {% endblock %}
+    </title>
 </head>
 <body>
 
@@ -17,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/products/list-product/">Lista de productos</a>
+                <a class="nav-link active" aria-current="page" href="/products/list-product/">Listado de productos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/segundo-template/">Segundo template</a>
@@ -48,6 +51,8 @@
       {% block contenido_que_cambia %}
 
       {% endblock %}
+
+      <h3>Aca abajo iria el Footer</h3>
 
 </body>
 
