--- a/ecommerce/templates/template_2.html
+++ b/ecommerce/templates/template_2.html
@@ -1,10 +1,15 @@
 {% extends "base.html" %}
 
+{% block titulo %}
+
+    Template 2
+
+{% endblock %}
+
 {% block contenido_que_cambia %}
 
 <h1>Hola desde el template</h1>
-<h2>{{name}}</h2>
-<h3>{{last_name}}</h3>
+<h3>{{name}} {{last_name}}</h3>
 <h3>Hoy es {{today}}</h3>
 
 {% endblock %}
