Añadido de Footer

--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -52,7 +52,14 @@
 
       {% endblock %}
 
-      <h3>Aca abajo iria el Footer</h3>
+      <footer class="bg-light text-center text-lg-start">
+        <!--Copyright-->
+        <div class="text-center p-3" style="background-color: rgba(27, 8, 69, 0.2);">
+          © Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+      <!--Copyright-->
+      </footer>
 
 </body>
 
