Añadidos bloques por defecto

--- a/ecommerce/templates/template_lista.html
+++ b/ecommerce/templates/template_lista.html
@@ -1,11 +1,21 @@
-{% for elemento in lista %}
+{% extends "base.html" %}
 
-    {% if elemento == "banana" %}
-        <h1 style="color:yellow">{{elemento}}</h1>
-    {% elif elemento == "tomate" %}
-        <h1 style="color:red">{{elemento}}</h1>
-    {% elif elemento == "naranja" %}
-        <h1 style="color:orangered">{{elemento}}</h1>
-    {% endif %}
- 
-{% endfor %}
+{% block titulo %}
+    Template con lista
+{% endblock %}
+
+{% block contenido_que_cambia %}
+
+    {% for elemento in lista %}
+
+        {% if elemento == "banana" %}
+            <h1 style="color:yellow">{{elemento}}</h1>
+        {% elif elemento == "tomate" %}
+            <h1 style="color:red">{{elemento}}</h1>
+        {% elif elemento == "naranja" %}
+            <h1 style="color:orangered">{{elemento}}</h1>
+        {% endif %}
+    
+    {% endfor %}
+
+{% endblock %}    
