--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>
       {% block titulo %}
+        Valor por defecto
       {% endblock %}
     </title>
 </head>
@@ -23,21 +24,10 @@
                 <a class="nav-link active" aria-current="page" href="/products/list-product/">Listado de productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/segundo-template/">Segundo template</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Acción</a></li>
-                  <li><a class="dropdown-item" href="#">Otra acción</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Algo más aquí</a></li>
-                </ul>
+                <a class="nav-link active" aria-current="page" href="/segundo-template/">Segundo template</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Deshabilitado</a>
+                <a class="nav-link active" aria-current="page" href="/template-con-lista/">Template con lista</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -49,7 +39,7 @@
       </nav>
 
       {% block contenido_que_cambia %}
-
+        Bloque por defecto
       {% endblock %}
 
       <footer class="bg-light text-center text-lg-start">
