Formulario para carga de productos

--- a/ecommerce/templates/products/new_product.html
+++ b/ecommerce/templates/products/new_product.html
@@ -1,3 +1,20 @@
-<h3>El nombre del producto es {{new_product.name}}</h3>
-<h3>El precio del producto es {{new_product.price}}</h3>
-<h3>El stock del producto es {{new_product.stock}}</h3>
+{% extends "base.html" %}
+
+{% block titulo %}
+    Carga de productos
+{% endblock %}
+
+{% block contenido_que_cambia %}
+
+<form action="" method="POST">
+{% csrf_token %}
+
+<table>
+
+    {{form.as_table}}
+
+</table>
+
+</form>
+
+{% endblock %}
