--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -21,6 +21,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/products/create-product/">Crear producto</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/products/list-product/">Listado de productos</a>
               </li>
               <li class="nav-item">
