--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -33,8 +33,8 @@
                 <a class="nav-link active" aria-current="page" href="/template-con-lista/">Template con lista</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+            <form class="d-flex" role="search" action="/products/search-products/" mathod="GET">
+              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" name="search">
               <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
           </div>
