Creacion de articulo por CBV con formulario

--- a/ecommerce/templates/articles/list_articles.html
+++ b/ecommerce/templates/articles/list_articles.html
@@ -10,7 +10,7 @@
 
     <h1>{{article.title}}</h1> 
     <h1>{{article.description}}</h1> 
-    <a href="/articles/detail-article/{{article.id}}/" class="btn btn-danger">Detalle</a>
+    <a href="/articles/detail-article/{{article.id}}/" class="btn btn-primary">Detalle</a>
 
 
 {% endfor %}
