--- a/ecommerce/templates/articles/detail_articles.html
+++ b/ecommerce/templates/articles/detail_articles.html
@@ -10,5 +10,6 @@
   <h1>{{object.description}}</h1>
   <h1>{{object.creation_date}}</h1> 
   <h1>{{object.author}}</h1>
+  <a href="/articles/delete-articles/{{object.id}}/" class="btn btn-danger">Eliminar</a>
 
 {% endblock %}
