--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -30,8 +30,22 @@
                 <a class="nav-link active" aria-current="page" href="/segundo-template/">Segundo template</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/template-con-lista/">Template con lista</a>
+                <a class="nav-link active" aria-current="page" href="/template-con-lista/" style="margin-right: 13rem;">Template con lista</a>
               </li>
+
+              {% if request.user.is_authenticated %}
+                <li class="nav-item active">
+                  <a class="nav-link" href="/users/logout/">Logout</a>
+                </li>
+              {% else %}
+                <li class="nav-item active">
+                  <a class="nav-link" href="/users/login/">Login</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="/users/register/">Register</a>
+                </li>
+              {% endif %}
+
             </ul>
             <form class="d-flex" role="search" action="/products/search-products/" mathod="GET">
               <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" name="search">
