--- a/ecommerce/templates/products/products_list.html
+++ b/ecommerce/templates/products/products_list.html
@@ -9,7 +9,11 @@
 {% for product in products %}
 
         <div class="card" style="width: 18rem;">
+          {% if product.image %}
+            <img src="{{product.image.url}}" class="card-img-top" alt="...">
+          {% else %}
             <img src="https://beermarket.com.ar/wp-content/uploads/2021/04/Coca-Cola-2.25L.png" class="card-img-top" alt="...">
+          {% endif %}  
             <div class="card-body">
             <h5 class="card-title">{{product.name}}</h5>
             <p class="card-text">Precio: {{product.price}}</p>
